# obj-viewer

./: .gitignore  CMakeLists.txt  Model.cpp  Shader.cpp  frag.glsl  main.cpp  vertex.glsl
include/: Model.h  Shader.h
